create bio and POST /api/users/me for populating bio
